[package]
name = "chert"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "domain-specific expression language"
homepage = "https://github.com/jesopo/chert"
documentation = "https://github.com/jesopo/chert"
repository = "https://github.com/jesopo/chert"
readme = "README.md"

[dependencies]
chert_accessor = { version = "0.2.0", path = "./chert_accessor" }
chert_derive = { version = "0.2.0", path = "./chert_derive" }
cidr = { version = "0.2.2", features = ["serde"] }
logos = "0.13.0"
regex = "1.9.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_regex = "1.1.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "eval_compare_native"
harness = false

[[bench]]
name = "eval_flamegraphable"
harness = false

[profile.bench]
debug = true
