[package]
name = "chert_accessor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "domain-specific expression language"
homepage = "https://github.com/jesopo/chert"
documentation = "https://github.com/jesopo/chert"
repository = "https://github.com/jesopo/chert"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.1"
