[package]
name = "chert_derive"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "domain-specific expression language"
homepage = "https://github.com/jesopo/chert"
documentation = "https://github.com/jesopo/chert"
repository = "https://github.com/jesopo/chert"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.28"
syn = { version = "2.0.18", features = ["extra-traits", "test"] }
proc-macro2 = "1.0.60"
